--- a/styles/details.css
+++ b/styles/details.css
@@ -7,5 +7,8 @@
     padding: 1rem;
     border-radius: 0.5rem;
     box-shadow: 0.25rem 0.25rem 0.5rem rgb(143, 143, 143);
+    display: flex;
 }
+
+
 
